--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
          </div>
          <h2>Daftar Transaksi</h2>
          <u1 id="Transaction-list"></u1>
+         <li>fizaogel</li>
     </div>
     <script src="script.js"></script>
 </body>
