--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
          <h2>Daftar Transaksi</h2>
          <u1 id="Transaction-list"></u1>
          <li>fizaogel</li>
+         <li>hello world</li>
     </div>
     <script src="script.js"></script>
 </body>
