--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="author" content="TemplatesJungle">
   <meta name="keywords" content="Online Store">
-  <meta name="description" content="Stylish - Shoes Online Store HTML Template">
+  <meta name="description" content="Stylish - Shoes Online Store ">
 
   <link rel="stylesheet" href="css/vendor.css">
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -385,22 +385,21 @@
           <div class="col">
             <ul class="social-links list-unstyled d-flex m-0">
               <li class="pe-2">
-                <a href="#">
+                <a href="https://www.facebook.com/profile.php?id=100090756675797">
                   <svg class="facebook" width="20" height="20">
                     <use xlink:href="#facebook"></use>
-                   
                   </svg>
                 </a>
               </li>
               <li class="pe-2">
-                <a href="#">
+                <a href="https://www.instagram.com/fizaoghel/profilecard/?igsh=NDNwNTIyZDc0dTFx">
                   <svg class="instagram" width="20" height="20">
                     <use xlink:href="#instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="pe-2">
-                <a href="#">
+                <a href="https://youtube.com/@fizacantik-w4n?si=wR38wK6wQWvM-Vb3">
                   <svg class="youtube" width="20" height="20">
                     <use xlink:href="#youtube"></use>
                   </svg>
@@ -422,10 +421,10 @@
           <div class="col">
             <ul class="d-flex justify-content-end gap-3 list-unstyled m-0">
               <li>
-                <a href="#">Contact</a>
+                <a href="https://wa.link/9nlmwv">Contact</a>
               </li>
               <li>
-                <a href="#">Cart</a>
+                <a href="http://tiktok.com/@me_manussah">Cart</a>
               </li>
               <li>
                 <a href="#">Login</a>
@@ -1111,9 +1110,9 @@
           <div class="footer-menu">
             <h5 class="widget-title pb-3">Get In Touch</h5>
             <div class="footer-contact-text">
-              <span>Stylish Online Store 123 Main Street, Toulouse - France. </span>
-              <span> Call us: (+33) 800 456 789-987 </span>
-              <span class="text-hover fw-bold light-border"><a href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a></span>
+              <span>Maza Shoes , Madura - Pamekasan. </span>
+              <span> Call us: (+62) 81936023573 </span>
+              <span class="text-hover fw-bold light-border"><a href="mailto:contact@yourwebsite.com">mazafiza123@gmail.com</a></span>
             </div>
           </div>
         </div>
