merevisi bagian index.php

--- a/assets/bootstrap/index.html
+++ b/assets/bootstrap/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Fiza Shoes</title>
+  <title>Stylish - Shoes Online Store HTML Template</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="author" content="TemplatesJungle">
   <meta name="keywords" content="Online Store">
-  <meta name="description" content="Stylish - Shoes Online Store ">
+  <meta name="description" content="Stylish - Shoes Online Store HTML Template">
 
   <link rel="stylesheet" href="css/vendor.css">
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -385,21 +385,21 @@
           <div class="col">
             <ul class="social-links list-unstyled d-flex m-0">
               <li class="pe-2">
-                <a href="https://www.facebook.com/profile.php?id=100090756675797">
+                <a href="#">
                   <svg class="facebook" width="20" height="20">
                     <use xlink:href="#facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="pe-2">
-                <a href="https://www.instagram.com/fizaoghel/profilecard/?igsh=NDNwNTIyZDc0dTFx">
+                <a href="#">
                   <svg class="instagram" width="20" height="20">
                     <use xlink:href="#instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="pe-2">
-                <a href="https://youtube.com/@fizacantik-w4n?si=wR38wK6wQWvM-Vb3">
+                <a href="#">
                   <svg class="youtube" width="20" height="20">
                     <use xlink:href="#youtube"></use>
                   </svg>
@@ -421,10 +421,10 @@
           <div class="col">
             <ul class="d-flex justify-content-end gap-3 list-unstyled m-0">
               <li>
-                <a href="https://wa.link/9nlmwv">Contact</a>
+                <a href="#">Contact</a>
               </li>
               <li>
-                <a href="http://tiktok.com/@me_manussah">Cart</a>
+                <a href="#">Cart</a>
               </li>
               <li>
                 <a href="#">Login</a>
@@ -1110,9 +1110,9 @@
           <div class="footer-menu">
             <h5 class="widget-title pb-3">Get In Touch</h5>
             <div class="footer-contact-text">
-              <span>Maza Shoes , Madura - Pamekasan. </span>
-              <span> Call us: (+62) 81936023573 </span>
-              <span class="text-hover fw-bold light-border"><a href="mailto:contact@yourwebsite.com">mazafiza123@gmail.com</a></span>
+              <span>Stylish Online Store 123 Main Street, Toulouse - France. </span>
+              <span> Call us: (+33) 800 456 789-987 </span>
+              <span class="text-hover fw-bold light-border"><a href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a></span>
             </div>
           </div>
         </div>
